--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@
 hs_err_pid*
 replay_pid*
 /actividad_1/ejercicio_resuelto4/target/
+/actividad_1/ejercicio_propuesto12/nbproject/private/
+/actividad_1/ejercicio_propuesto12/target/
