Se hace la ventana para la interfaz de usuario

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ replay_pid*
 /actividad_1/ejercicio_resuelto4/target/
 /actividad_1/ejercicio_propuesto12/nbproject/private/
 /actividad_1/ejercicio_propuesto12/target/
+/actividad_3/ejercicio8_2/target/
