--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ replay_pid*
 /actividad_1/ejercicio_propuesto12/nbproject/private/
 /actividad_1/ejercicio_propuesto12/target/
 /actividad_3/ejercicio8_2/target/
+/actividad_3/ejercicio8_3/target/
