Creacion de la ventana principal

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ replay_pid*
 /actividad_1/ejercicio_propuesto12/target/
 /actividad_3/ejercicio8_2/target/
 /actividad_3/ejercicio8_3/target/
+/actividad_6/Ejercicio_8_4/target/
